--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
   ],
   "rules": {
     "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/destructuring-assignment": "off",
     "no-console": "off",
     "react/jsx-filename-extension": [
       1,
