--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
